bin/tests/errors_lexer/lexer/lex_err_incomplete_hex_escape.swg
#global fileprivate

'\x1' // swc-expected-error {{lex_err_incomplete_hex_escape}}
